@@ -1,16 +1,12 @@
 package org.abcd.examples.ParLang;
 
 import org.abcd.examples.ParLang.AstNodes.*;
+import org.abcd.examples.ParLang.symbols.Attributes;
 import org.abcd.examples.ParLang.symbols.Scope;
 import org.abcd.examples.ParLang.symbols.SymbolTable;
 
 import java.io.*;
-import java.util.ArrayList;
-
-import java.util.HashMap;
-import java.util.Objects;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 
 public class CodeGenVisitor implements NodeVisitor {
@@ -32,7 +28,7 @@ public class CodeGenVisitor implements NodeVisitor {
     /**
      * @return the current line with the correct indentation.
      */
-    private String getLineBasic() {
+    private String getLine() {
         String line = stringBuilder.toString().indent(localIndent* 4);
         stringBuilder.setLength(0); // Resets string builder
         return line;
@@ -53,13 +49,15 @@ public class CodeGenVisitor implements NodeVisitor {
     private String VariableConverter(String type){
         switch (type) {
             case "int":
-                return "long";
+                return javaE.LONG.getValue();
             case "double":
-                return "double";
+                return javaE.DOUBLE.getValue();
             case "bool":
-                return "boolean";
+                return javaE.BOOLEAN.getValue();
             case "string":
-                return "String";
+                return javaE.STRING.getValue();
+            case "void":
+                return javaE.VOID.getValue();
             default:
                 return type;
         }
@@ -131,7 +129,6 @@ public class CodeGenVisitor implements NodeVisitor {
         stringBuilder
                 .append(access)
                 .append(returnType)
-                .append(" ")
                 .append(name);
     }
 
@@ -189,7 +186,7 @@ public class CodeGenVisitor implements NodeVisitor {
 
     private void appendBodyOpen(AstNode node,String before,String after){
         stringBuilder.append( " {\n");
-        codeOutput.add(getLineBasic() );//gets current line with indentation given by localIndent at this moment, resets stringBuilder, and adds the line to codeOutput.
+        codeOutput.add(getLine() );//gets current line with indentation given by localIndent at this moment, resets stringBuilder, and adds the line to codeOutput.
         localIndent++; //content of the body is indented
         visitChildren(node,before,after);//append the content of the body by visiting the children of @param node.
     }
@@ -201,7 +198,7 @@ public class CodeGenVisitor implements NodeVisitor {
     private void appendBodyClose(){
         localIndent--;
         stringBuilder.append( "}\n");
-        codeOutput.add(getLineBasic() );
+        codeOutput.add(getLine() );
     }
 
     private void appendConstructor(String className,List<IdentifierNode> params){
@@ -212,7 +209,7 @@ public class CodeGenVisitor implements NodeVisitor {
         if(!params.isEmpty()){
             for(IdentifierNode param:params){
                 stringBuilder
-                        .append(param.getType())
+                        .append(VariableConverter(param.getType()))
                         .append(" ")
                         .append(param.getName())
                         .append(", ");
@@ -222,7 +219,7 @@ public class CodeGenVisitor implements NodeVisitor {
         }
 
         stringBuilder.append(") {\n");
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         localIndent++;
         if(params!=null){
             for(IdentifierNode param:params){
@@ -235,10 +232,10 @@ public class CodeGenVisitor implements NodeVisitor {
                         .append(";\n");
             }
         }
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         localIndent--;
         stringBuilder.append("}\n");
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
     }
 
     /***
@@ -249,6 +246,7 @@ public class CodeGenVisitor implements NodeVisitor {
         Scope scope=symbolTable.lookUpScope(node.getId());//Get the scope of the actor.
         Iterator<String> onMethods= scope.getDeclaredOnMethods().keySet().iterator();//get an iterator over the on methods of the actor.
         String methodName;
+        String className;
 
         //append the method signature
         stringBuilder
@@ -257,23 +255,44 @@ public class CodeGenVisitor implements NodeVisitor {
                 .append(javaE.ONRECEIVE.getValue())//has value "onReceive(Object message) "
                 .append("{\n");
 
-        codeOutput.add(getLineBasic());//get line and add to codeOutput before indentation changes.
+        codeOutput.add(getLine());//get line and add to codeOutput before indentation changes.
         localIndent++;
 
         //The body is an if-els chain.
         if(onMethods.hasNext()){//The first on-methods results in an if-statement.
             methodName=onMethods.next();
-            appendIfElseChainLink("if",getOnReceiveIfCondition(methodName),getOnReceiveIfBody(methodName));
+            className=getclassName(node,methodName);
+            appendIfElseChainLink("if",getOnReceiveIfCondition(className,methodName),getOnReceiveIfBody(methodName));
         }
         while (onMethods.hasNext()){//The remaining on-methods results in if-else statements
             methodName=onMethods.next();
-            appendIfElseChainLink("if else",getOnReceiveIfCondition(methodName),getOnReceiveIfBody(methodName));
+            className=getclassName(node,methodName);
+            appendIfElseChainLink("else if",getOnReceiveIfCondition(className,methodName),getOnReceiveIfBody(methodName));
         }
         appendElse(javaE.UNHANDLED.getValue());//There is always and else statement in the end of the chain handling yet unhandled messages.
 
         localIndent--;
         stringBuilder.append("}\n");
-        codeOutput.add(getLineBasic()); //get line and add to codeOutput since indentation might change after calling this method.
+        codeOutput.add(getLine()); //get line and add to codeOutput since indentation might change after calling this method.
+    }
+
+    private String getclassName(ActorDclNode node,String methodName){
+        MethodDclNode methodNode=null;
+        String className=capitalizeFirstLetter(methodName);
+
+        for (AstNode childNode: node.getChildren()){
+            if(childNode instanceof MethodDclNode && ((MethodDclNode) childNode).getId().equals(methodName)){
+                methodNode=(MethodDclNode) childNode;
+                break;
+            }
+        }
+        if( methodNode!=null){
+            String scriptName=getMethodInFollowedScript(methodNode);
+            if(scriptName!=null){
+                className=scriptName+"."+className;
+            }
+        }
+        return className;
     }
 
     /**
@@ -286,7 +305,7 @@ public class CodeGenVisitor implements NodeVisitor {
         String keyword;
         if(type.equals("if")){
             keyword=javaE.IF.getValue();
-        }else if(type.equals("if else")) {
+        }else if(type.equals("else if")) {
             keyword=javaE.ELSEIF.getValue();
         }else{
             throw new IllegalArgumentException("argument type is not 'if' or 'if else'.");
@@ -296,10 +315,10 @@ public class CodeGenVisitor implements NodeVisitor {
                 .append("(")
                 .append(condition)
                 .append(") {\n");
-        codeOutput.add(getLineBasic());//get line before indentation changes.
+        codeOutput.add(getLine());//get line before indentation changes.
         localIndent++;
         stringBuilder.append(body);
-        codeOutput.add(getLineBasic());//get line before indentation changes.
+        codeOutput.add(getLine());//get line before indentation changes.
         localIndent--;
         stringBuilder.append("}");
     }
@@ -313,21 +332,22 @@ public class CodeGenVisitor implements NodeVisitor {
         stringBuilder
                 .append(javaE.ELSE.getValue())
                 .append("{\n");
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         localIndent++;
         stringBuilder.append(body);
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         localIndent--;
         stringBuilder.append("}\n");
-        codeOutput.add(getLineBasic());//get the line since indentation might change after calling this method.
+        codeOutput.add(getLine());//get the line since indentation might change after calling this method.
     }
 
     /**
      * @param methodName Name of the on-method
+     * @param className class name of the protocol class corresponding to the on-method.
      * @return A condition for checking if incoming message is of the message type corresponding to the on-method.
      */
-    private String getOnReceiveIfCondition(String methodName){
-        return "message "+javaE.INSTANCEOF.getValue()+capitalizeFirstLetter(methodName)+" "+methodName+"Msg";
+    private String getOnReceiveIfCondition(String className,String methodName){
+        return "message "+javaE.INSTANCEOF.getValue()+className+" "+methodName+"Msg";
     }
 
     /***
@@ -335,7 +355,7 @@ public class CodeGenVisitor implements NodeVisitor {
      * @return A statement which calls a private-method in the actor. This method has the functionality to be executed when the message corresponding to the on-method is received.
      */
     private String getOnReceiveIfBody(String methodName){
-        return "on"+capitalizeFirstLetter(methodName)+"("+methodName+"Msg"+");";
+        return parLangE.ON.getValue()+capitalizeFirstLetter(methodName)+"("+methodName+"Msg"+");";
     }
 
     private String capitalizeFirstLetter(String input) {
@@ -346,14 +366,8 @@ public class CodeGenVisitor implements NodeVisitor {
         }
     }
 
-    @Override
-    public void visit(AccessNode node) {
-        if(node instanceof StateAccessNode){
-            visit((StateAccessNode) node);
-        }else if(node instanceof KnowsAccessNode){
-            visit((KnowsAccessNode) node);
-        }
-    }
+
+
 
     @Override
     public void visit(ArrayAccessNode node) {
@@ -571,7 +585,7 @@ public class CodeGenVisitor implements NodeVisitor {
     }
     if(!(node.getParent() instanceof ForNode)){ //if the parent is not a for node, add a semicolon, else don't
         stringBuilder.append(javaE.SEMICOLON.getValue());
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         }
 
     }
@@ -581,7 +595,7 @@ public class CodeGenVisitor implements NodeVisitor {
         if (node.getParent() instanceof MainDclNode) {
             stringBuilder
                     .append(javaE.CURLY_OPEN.getValue());
-            codeOutput.add(getLineBasic());
+            codeOutput.add(getLine());
             localIndent++;
             stringBuilder
                     .append("ActorSystem system = ActorSystem.create(\"system\")")
@@ -746,7 +760,7 @@ public class CodeGenVisitor implements NodeVisitor {
                 visitChild(node.getChildren().get(2));
             }
         }
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
     }
 
     //HashMap to convert the type of the array to the type of the arraylist
@@ -771,11 +785,10 @@ public class CodeGenVisitor implements NodeVisitor {
         if (node.getParent() instanceof KnowsNode) {
             stringBuilder
                     .append(javaE.PRIVATE.getValue())
-                    .append(javaE.FINAL.getValue())
                     .append(javaE.ACTORREF.getValue())
                     .append(node.getName())
                     .append(javaE.SEMICOLON.getValue());
-            codeOutput.add(getLineBasic());
+            codeOutput.add(getLine());
         } else if(arrayType !=null){
             stringBuilder
                     .append(arrayType)
@@ -788,24 +801,23 @@ public class CodeGenVisitor implements NodeVisitor {
             if(node.getParent() instanceof VarDclNode && node.getParent().getChildren().size() > 1){
                 stringBuilder.append(node.getName());
             }
-        } else if(symbolTable.lookUpScope(node.getType())!=null) {//If there is a scope with the same name as the IdentierfierNode's type, then the type is an actor
-             stringBuilder
-                     .append(javaE.ACTORREF.getValue())//appends "ActorRef ".
-                     .append(node.getName());
-         }
-        else if(node.getType()!= null){
-             if (node.getParent() instanceof ReturnStatementNode || node.getParent() instanceof AssignNode) {
-                 stringBuilder.append(node.getName());
-             } else {
-                 stringBuilder.append(VariableConverter(node.getType()));
-                 stringBuilder.append(" ");
-                 stringBuilder.append(node.getName());
-             }
-
-        }
-        else{
+        } else if(node.getType()!= null && isChildOfVarDclOrParameters(node)){
+            String type;
+            if(symbolTable.lookUpScope(node.getType())!=null) {//If there is a scope with the same name as the IdentierfierNode's type, then the type is an actor
+                type=javaE.ACTORREF.getValue();
+            }else{
+                type=VariableConverter(node.getType())+" ";
+            }
+            stringBuilder
+                    .append(type)
+                    .append(node.getName());
+        } else{
             stringBuilder.append(node.getName());
         }
+    }
+
+    private boolean isChildOfVarDclOrParameters(IdentifierNode node){
+        return (node.getParent() instanceof VarDclNode || node.getParent() instanceof ParametersNode);
     }
 
     @Override
@@ -836,6 +848,8 @@ public class CodeGenVisitor implements NodeVisitor {
     @Override
     public void visit(KnowsAccessNode node) {
         stringBuilder
+                .append(javaE.THIS.getValue())
+                .append(".")
                 .append(node.getAccessIdentifier());
     }
 
@@ -846,7 +860,7 @@ public class CodeGenVisitor implements NodeVisitor {
 
     @Override
     public void visit(ListNode node) {
-        if (!(node.getParent() instanceof AssignNode && node.getParent().getChildren().get(0) instanceof ArrayAccessNode)) {
+        if (!(node.getParent() instanceof AssignNode && node.getParent().getChildren().getFirst() instanceof ArrayAccessNode)) {
             if (node.getChildren() != null && !(node.getParent() instanceof ListNode)) {
                 stringBuilder.append(".addAll(Arrays.asList(");
             } else {
@@ -885,7 +899,7 @@ public class CodeGenVisitor implements NodeVisitor {
                 .append(javaE.CLASS.getValue())
                 .append("Main")
                 .append(" {\n");
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
         localIndent++;
         //public static void main(String[] args) {
         //      ActorSystem system = ActorSystem.create("system");
@@ -910,43 +924,47 @@ public class CodeGenVisitor implements NodeVisitor {
     @Override
     public void visit(MethodDclNode node) {
         if(node.getMethodType().equals(parLangE.ON.getValue())){
-            if(!isMethodInFollowedScript(node)){
+            if(getMethodInFollowedScript(node)==null){
                 //We create a static class. Instances of this class is sent as message when the on-method is called.
                 String className=capitalizeFirstLetter(node.getId());
                 appendStaticFinalClassDef(javaE.PUBLIC.getValue(),className);//It is important that it is public since other actors must be able to access it.
-                appendBodyOpen(node.getChildren().getFirst(),javaE.PUBLIC.getValue(),";\n");
+
+                String fieldDclProlog=javaE.PUBLIC.getValue()+javaE.FINAL.getValue();
+                appendBodyOpen(node.getChildren().getFirst(),fieldDclProlog,";\n");
                 appendConstructor(className,(List<IdentifierNode>)(List<?>) node.getChildren().get(0).getChildren());
                 appendBodyClose();
             }
-            appenBehvaiour(node);
+            appendBehvaiour(node);
 
             //To be done
         } else if (node.getMethodType().equals(parLangE.LOCAL.getValue())) {
-            appendMethodDefinition(javaE.PRIVATE.getValue(), node.getType(),node.getId());
+            appendMethodDefinition(javaE.PRIVATE.getValue(), VariableConverter(node.getType()),node.getId());
             visit(node.getParametersNode());//append parameters in target code
             visit((LocalMethodBodyNode) node.getBodyNode()); //append the method's body in the target code.
         }
     }
 
-    private void appenBehvaiour(MethodDclNode node){
-        appendMethodDefinition(javaE.PRIVATE.getValue(),javaE.VOID.getValue(),node.getId());
+    private void appendBehvaiour(MethodDclNode node){
+        String name=parLangE.ON.getValue()+capitalizeFirstLetter(node.getId());
+        appendMethodDefinition(javaE.PRIVATE.getValue(),javaE.VOID.getValue(),name);
+        appendParameters((ParametersNode) node.getChildren().getFirst());
         appendBody(node.getChildren().get(1));
     }
 
-    private boolean isMethodInFollowedScript(MethodDclNode node){
+    private String getMethodInFollowedScript(MethodDclNode node){
         //MethodDclNode's parent is always an actor.
         // If the actor follows a script, a FollowsNode is the first child of this actor
-        AstNode firstChildOfActor=node.getParent().getChildren().get(0);
+        AstNode firstChildOfActor=node.getParent().getChildren().getFirst();
         if(firstChildOfActor instanceof FollowsNode followsNode){
             List<IdentifierNode> followedScripts=(List<IdentifierNode>)(List<?>) followsNode.getChildren();//Casting through intermediate wildcard type in or to be able to cast the list.
             for(IdentifierNode script:followedScripts){
-                Scope scriptScope=symbolTable.lookUpScope(script.getName());
-                if(scriptScope.getDeclaredOnMethods().containsKey(node.getId())){
-                    return true;
+                HashMap<String, Attributes> scriptOnMethods=symbolTable.lookUpScope(script.getName()).getDeclaredOnMethods();
+                if(scriptOnMethods.containsKey(node.getId())){
+                    return script.getName();
                 }
             }
         }
-        return false;
+        return null;
     }
 
 
@@ -974,7 +992,7 @@ public class CodeGenVisitor implements NodeVisitor {
         }
         visitPrintChildrenFromChildOne(node);
         stringBuilder.append(")").append(javaE.SEMICOLON.getValue());
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
     }
 
     //Check if the print call node is a one dimensional array
@@ -1040,7 +1058,7 @@ public class CodeGenVisitor implements NodeVisitor {
             stringBuilder.deleteCharAt(stringBuilder.length() - 1);
         }
         stringBuilder.append(javaE.SEMICOLON.getValue());
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
     }
 
 
@@ -1089,7 +1107,7 @@ public class CodeGenVisitor implements NodeVisitor {
             localIndent++;
             visitChildren(node, javaE.PUBLIC.getValue(),javaE.SEMICOLON.getValue()); //Insterts the parameters ad public fields in the method's static class
             localIndent--;
-            codeOutput.add(getLineBasic() );
+            codeOutput.add(getLine() );
         }
     }
 
@@ -1157,14 +1175,14 @@ public class CodeGenVisitor implements NodeVisitor {
     }
 
     @Override
-    public void visit(ExpNode node) {
+    public void visit(ExpNode node) {//abstract
 
     }
 
     @Override
     public void visit(StateAccessNode node) {
         stringBuilder
-                .append(parLangE.STATE.getValue())
+                .append(javaE.THIS.getValue())
                 .append(".")
                 .append(node.getAccessIdentifier());
     }
@@ -1178,14 +1196,14 @@ public class CodeGenVisitor implements NodeVisitor {
     @Override
     public void visit(VarDclNode node) {
         if (node.getParent() instanceof StateNode) {
-            stringBuilder.append(javaE.PRIVATE.getValue()).append(javaE.FINAL.getValue());
+            stringBuilder.append(javaE.PRIVATE.getValue());
         }
         visitChildren(node);
 
         //if the parent is not a for node, add a semicolon, else don't
         if(!(node.getParent() instanceof ForNode)){
                 stringBuilder.append(javaE.SEMICOLON.getValue());
-                codeOutput.add(getLineBasic());
+                codeOutput.add(getLine());
             }
 
     }
@@ -1198,7 +1216,7 @@ public class CodeGenVisitor implements NodeVisitor {
         stringBuilder.append(")");
         visitChild(node.getChildren().get(1));
         stringBuilder.append("\n");
-        codeOutput.add(getLineBasic());
+        codeOutput.add(getLine());
     }
 
     @Override
